--- a/SnesConnectorLibrary/SnesConnectorLibrary.csproj
+++ b/SnesConnectorLibrary/SnesConnectorLibrary.csproj
@@ -7,6 +7,14 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <Protobuf Include="sni.proto" GrpcServices="Client" Link="Protos\sni.proto" />
+
+      <PackageReference Include="Google.Protobuf" Version="3.25.2" />
+      <PackageReference Include="Grpc.Net.Client" Version="2.60.0" />
+      <PackageReference Include="Grpc.Tools" Version="2.60.0">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
       <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
       <PackageReference Include="Websocket.Client" Version="5.0.0" />
