--- a/SnesConnectorLibrary/SnesConnectorLibrary.csproj
+++ b/SnesConnectorLibrary/SnesConnectorLibrary.csproj
@@ -4,6 +4,13 @@
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <PackageId>MattEqualsCoder.SnesConnectorLibrary</PackageId>
+        <Version>0.1.0</Version>
+        <Title>SNES Connector Library</Title>
+        <Authors>MattEqualsCoder</Authors>
+        <Description>Library for connecting to the various methods of interacting with the SNES, including SNI, QUSB2SNES, and Lua scripts.</Description>
+        <PackageProjectUrl>https://github.com/MattEqualsCoder/SnesConnectorLibrary</PackageProjectUrl>
+        <RepositoryUrl>https://github.com/MattEqualsCoder/SnesConnectorLibrary</RepositoryUrl>
     </PropertyGroup>
 
     <ItemGroup>
