--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -43,7 +43,9 @@ jobs:
       if: ${{ github.event_name != 'pull_request' }}
       shell: pwsh
       run: |
-        Copy-Item -Path SnesConnectorLibrary\bin\Release\*.nupkg -Destination Output
+        $outputDir = "$pwd\Output\
+        New-Item -ItemType Directory -Force -Path $outputDir
+        Copy-Item -Path SnesConnectorLibrary\bin\Release\*.nupkg -Destination $outputDir
     - name: Building the Win 64bit package
       if: ${{ github.event_name != 'pull_request' }}
       shell: pwsh
