--- a/SnesConnectorApp/SnesConnectorApp.csproj
+++ b/SnesConnectorApp/SnesConnectorApp.csproj
@@ -5,7 +5,7 @@
         <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
         <ApplicationManifest>app.manifest</ApplicationManifest>
         <AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
-        <Version>1.0.0-beta.3</Version>
+        <Version>1.0.0</Version>
         <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
     </PropertyGroup>
 
