--- a/SnesConnectorLibrary/SnesConnectorLibrary.csproj
+++ b/SnesConnectorLibrary/SnesConnectorLibrary.csproj
@@ -13,21 +13,21 @@
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-        <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
+        <TargetFrameworks>net8.0;net9.0;net10.0</TargetFrameworks>
     </PropertyGroup>
 
     <ItemGroup>
       <Protobuf Include="sni.proto" GrpcServices="Client" Link="Protos\sni.proto" />
 
-      <PackageReference Include="Google.Protobuf" Version="3.29.2" />
-      <PackageReference Include="Grpc.Net.Client" Version="2.67.0" />
-      <PackageReference Include="Grpc.Tools" Version="2.68.1">
+      <PackageReference Include="Google.Protobuf" Version="3.33.4" />
+      <PackageReference Include="Grpc.Net.Client" Version="2.76.0" />
+      <PackageReference Include="Grpc.Tools" Version="2.76.0">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
-      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0" />
-      <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.0" />
-      <PackageReference Include="Websocket.Client" Version="5.1.2" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.2" />
+      <PackageReference Include="Microsoft.Extensions.Logging" Version="10.0.2" />
+      <PackageReference Include="Websocket.Client" Version="5.3.0" />
     </ItemGroup>
 
     <ItemGroup>
